k8s/apps/10-mibo-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mibo-client
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mibo-client
  template:
    metadata:
      labels:
        app: mibo-client
    spec:
      containers:
        - name: mibo-client
          image: registry.digitalocean.com/mibo/client:test-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: mibo-client
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: mibo-client
  ports:
    - name: http
      port: 80
      targetPort: 80
