k8s/apps/14-mibo-status.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mibo-status
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mibo-status
  template:
    metadata:
      labels:
        app: mibo-status
    spec:
      containers:
        - name: mibo-status
          image: registry.digitalocean.com/mibo/status:test-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: mibo-status
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: mibo-status
  ports:
    - name: http
      port: 80
      targetPort: 80
