k8s/apps/13-mibo-docs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-docs-http
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: docs.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mibo-docs
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-docs
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
    - host: docs.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mibo-docs
                port:
                  number: 80
  tls:
    - hosts:
        - docs.mibo.monster
