k8s/apps/15-mibo-status-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: status-https-redirect
  namespace: test
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-status-http
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-status-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: status.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mibo-status
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mibo-status
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
    - host: status.mibo.monster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mibo-status
                port:
                  number: 80
  tls:
    - hosts:
        - status.mibo.monster
